--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,17 +18,6 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="163dp" />
 
-    <Button
-        android:id="@+id/startObserverButton"
-        android:layout_width="147dp"
-        android:layout_height="65dp"
-        android:layout_marginEnd="64dp"
-        android:text="Start Observation"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/WaveRecyclerView"
-        app:layout_constraintVertical_bias="1.0" />
-
     <SeekBar
         android:id="@+id/scaleInput"
         android:layout_width="225dp"
@@ -39,36 +28,10 @@
         app:layout_constraintTop_toTopOf="@+id/WaveRecyclerView"
         app:layout_constraintVertical_bias="0.851" />
 
-    <EditText
-        android:id="@+id/FrequencyInput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="numberDecimal"
-        android:textColor="#D60000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/WaveRecyclerView"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.106" />
-
-    <Button
-        android:id="@+id/playButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="play"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.287"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
-
     <TextView
         android:id="@+id/InfoTextView"
-        android:layout_width="230dp"
-        android:layout_height="182dp"
+        android:layout_width="524dp"
+        android:layout_height="255dp"
         android:textAlignment="viewStart"
         android:textColor="#950000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,6 +39,32 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.32" />
+        app:layout_constraintVertical_bias="0.685" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:baselineAligned="false"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.97">
+
+        <Button
+            android:id="@+id/playButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="play" />
+
+        <Button
+            android:id="@+id/startObserverButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start Observation" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
