--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,12 @@
         android:id="@+id/WaveRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:scrollbarThumbHorizontal="@color/colorPrimaryDark"
         android:scrollbarThumbVertical="@android:color/holo_blue_dark"
         android:scrollbars="horizontal"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="163dp" />
+        tools:layout_editor_absoluteX="-72dp" />
 
     <SeekBar
         android:id="@+id/scaleInput"
@@ -24,14 +24,15 @@
         android:layout_height="26dp"
         app:layout_constraintBottom_toBottomOf="@+id/WaveRecyclerView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintStart_toStartOf="@+id/WaveRecyclerView"
         app:layout_constraintTop_toTopOf="@+id/WaveRecyclerView"
-        app:layout_constraintVertical_bias="0.851" />
+        app:layout_constraintVertical_bias="0.69" />
 
     <TextView
         android:id="@+id/InfoTextView"
-        android:layout_width="524dp"
-        android:layout_height="255dp"
+        android:layout_width="244dp"
+        android:layout_height="180dp"
         android:textAlignment="viewStart"
         android:textColor="#950000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,9 +40,10 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.685" />
+        app:layout_constraintVertical_bias="0.981" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
@@ -59,12 +61,21 @@
             android:layout_height="match_parent"
             android:text="play" />
 
-        <Button
-            android:id="@+id/startObserverButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Start Observation" />
-
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/AnalysisProgressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="false"
+        android:max="100"
+        android:progress="0"
+        android:progressDrawable="@android:drawable/presence_online"
+        android:progressTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
