Super Sinusoid Simplification added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="16dp"
+        android:fadeScrollbars="false"
         android:scrollbarThumbHorizontal="@color/colorPrimaryDark"
         android:scrollbarThumbVertical="@android:color/holo_blue_dark"
         android:scrollbars="horizontal"
