--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/MainView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.Activity.MainActivity">
+    tools:context=".view.activity.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/WaveRecyclerView"
